--- a/HomeTask6/style.css
+++ b/HomeTask6/style.css
@@ -1,4 +1,12 @@
 .wrapper {
-  height: 300px;
   padding: 10px;
+}
+.calc-btn {
+  margin-top: 30px;
+}
+.choose-box {
+  min-width: 350px;
+}
+.btn-toppings {
+  width: 38px;
 }
