--- a/MoneyManager/src/app/money-manager/work-place/work-place.component.html
+++ b/MoneyManager/src/app/money-manager/work-place/work-place.component.html
@@ -2,4 +2,14 @@
   <app-inputs></app-inputs>
   <app-stats></app-stats>
 </div>
-<div class="list"></div>
+<div class="list">
+  <div class="title">
+    <h2>+</h2>
+    <h2>-</h2>
+  </div>
+  <ul>
+    <li>Зарплата</li>
+    <li class="outgo">Покупки в супермаркете</li>
+    <li class="outgo">Покупка одежды</li>
+  </ul>
+</div>
