--- a/MoneyManager/src/app/app.component.scss
+++ b/MoneyManager/src/app/app.component.scss
@@ -1,5 +1,10 @@
+* {
+  box-sizing: border-box;
+}
 app-work-place {
   display: flex;
   margin: 0 auto;
   width: 1000px;
+  border: 1px solid black;
 }
+
