--- a/MoneyManager/src/app/money-manager/inputs/inputs.component.scss
+++ b/MoneyManager/src/app/money-manager/inputs/inputs.component.scss
@@ -1,3 +1,14 @@
 body {
   height: 100px;
 }
+.mat-button-toggle-label-content {
+  line-height: 20px;
+}
+.input-operation {
+  &__control {
+    &--isChosen {
+      border: 2px solid red;
+      outline: none;
+    }
+  }
+}
