--- a/MoneyManager/src/app/money-manager/work-place/work-place.component.scss
+++ b/MoneyManager/src/app/money-manager/work-place/work-place.component.scss
@@ -1,22 +1,19 @@
 app-inputs {
-  height: 50%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  border: 1px solid black;
   align-items: center;
 }
 app-stats {
-  height: 50%;
+  height: 200px;
   display: block;
-  border: 1px solid black;
 }
 .controls {
-  height: 400px;
+
   width: 400px;
 }
 .list {
-  height: 400px;
+
   width: 600px;
   display: flex;
   flex-direction: column;
@@ -28,13 +25,18 @@ ul {
 }
 li {
   margin: 10px 0;
+  font-family: Roboto;
+  font-size: 16px;
 }
 .title {
   display: flex;
   justify-content: space-around;
 }
-.outgo {
+.consumption {
   text-align: end;
+
 }
+
+
 
 
